# tablex

./: Cargo.toml  LICENSE  README.md  README.org  config.toml  config.toml.bak  shell.nix
examples/: config.toml
src/: #lib.rs#  .#lib.rs  lib.rs  main.rs
