[package]
name = "kexr"
version = "0.1.0"
authors = ["Isak Johansson <isak@k22.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
prettytable-rs = "^0.8"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
