[package]
name = "tablex"
version = "0.0.1"
authors = ["Isak Johansson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
prettytable-rs = "^0.8"
toml = "0.5"
rayon = "1.3.0"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
